--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -8055,6 +8055,38 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
   noch einbauen
 \end{exerc}
 
+\section{Übungsblatt 13}
+% Aufgabe 51
+\begin{exerc}
+  Schreiben Sie $(3+2\sqrt[3]{2})^{-1}$ in der Form $x+y\sqrt[3]{2}+
+  z\sqrt[3]{4}$ mit $x,y,z\in\Q$.
+\end{exerc}
+
+% Aufgabe 52
+\begin{exerc}
+  Zeigen Sie, dass $\phi\coloneqq X^{3}-3X+1$ irreduzibel in $\Q[X]$ ist.
+  Rechnen Sie nach, dass $\phi(X^{2}-2)$ durch $\phi$ teilbar ist, und
+  bestimmen Sie die Galoisgruppe des Zerfällungskörpers $L$ von $\phi$ über
+  $\Q$.
+\end{exerc}
+
+% Aufgabe 53
+\begin{exerc}
+  Sei $L|K$ eine endliche Körpererweiterung mit $\chr(K)\nmid[L\colon K]$.
+  Zeigen Sie, dass $L|K$ separabel ist.
+\end{exerc}
+
+% Aufgabe 54
+\begin{exerc}
+  Zeigen Sie, dass die Normalteilerrelation $\trianglelefteq$ nicht unbedingt
+  transitiv ist. (Hinweis: Betrachten Sie z.\,B. die Gruppe $G=\Alt(4)$.)
+\end{exerc}
+
+% Aufgabe 55
+\begin{exerc}
+  Beweisen Sie, dass $\Q$ keine echte Untergruppe von endlichem Index enthält.
+\end{exerc}
+
 \section{Übungsblatt 14}
 
 % Aufgabe 56
@@ -8114,8 +8146,7 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
     9& 10& 11& 12\\
           \hline
     13& 14& 15& \\
-      
-	     \hline
+      	     \hline
   \end{tabular}
   gelangen?
 \end{exerc}
