--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -8007,7 +8007,7 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
   \begin{enumerate}[(i)]
   \item $G$ enthält das Element $a$ der Ordnung $p^{n-1}$. (Hinweis: \autoref{exer:10})
   \item $G$ enthält ein Element $b$ der Ordnung $p-1$. (Hinweis:
-    \autoref{satz:6.8}\todo{Eventuell stimmt die Referenz nicht. Prüfen.})
+    \autoref{satz:6.8}
   \item $G$ enthält ein Element $c$ der Ordnung $p^{n-1}\cdot
     (p-1)$. (Hinweis: \autoref{exer:9})
   \item Finden Sie ein Element der Ordnung $20$ in $U(\Z/25\Z)$ und
