--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -36,13 +36,15 @@
 \usepackage{fancyhdr}
 \usepackage{enumerate}
 \usepackage{index}
-\usepackage{pst-plot}
+\usepackage{tikz}
 \usepackage{nicefrac}
 \usepackage{svn}         % Zum Auswerten und ordentlichen Darstellen der
                          % SVN-Schlüsselwörter (s. vor \begin{document})
 \usepackage[draft=false,colorlinks,urlcolor=blue,breaklinks]{hyperref}
 \usepackage{paralist}
 \usepackage{ellipsis}
+
+\usetikzlibrary{calc}
 
 \newcommand*{\N}{\mathbb{N}}
 \newcommand*{\Z}{\mathbb{Z}}
@@ -894,16 +896,18 @@ nach dem Komma. Also gilt:
 
 \subsubsection{Geometrische Interpretation der Metrik im $(\R^2,d)$}
 
-\setlength{\unitlength}{1cm}
-\begin{picture}(-10,2.5)
-\put(0.5,0.5){\line(3,2){1.5}}
-\put(0.5,0.5){\circle*{0.1}}
-\put(0.4,0.2){x}
-\put(2,1.5){\circle*{0.1}}
-\put(1.9,1.2){y}
-\put(0,0){\vector(1,0){2.5}}
-\put(0,0){\vector(0,1){2.5}}
-\end{picture}
+\begin{figure}[htb]
+  \centering
+  \begin{tikzpicture}
+    \draw[->] (0,0) -- (2,0);
+    \draw[->] (0,0) -- (0,2);
+    \draw (.2,.6) -- (1.7,1.3);
+    \draw[fill,black] (.2,.6) circle (1pt) node[below] {$x$};
+    \draw[fill,black] (1.7,1.3) circle (1pt) node[below] {$y$};
+  \end{tikzpicture}
+  \caption{Interpretation des Abstands}
+  \label{fig:inter-abstand}
+\end{figure}
 
 Seien $x=(\xi_1 ,\xi_2), y=(\eta_1 ,\eta_2)$ zwei Punkte im $\R^{2}$. Dann ist
 $d(x,y)$ die Länge der Strecke zwischen beiden Punkten. Man kann sich die
@@ -3653,14 +3657,21 @@ mit
 Die Integralrechnung umfasst die klassische Problemstellung, 
 dass man eine Fläche unterhalb einer Kurve berechnen möchte:
 
-\begin{pspicture}(-1,-1)(5,4)
-   \psaxes{->}(0,0)(-1,-1)(5,4)
-   \psplot[linewidth=2pt]{0.8}{4.2}{x 0.85 mul 2 sub dup mul 1.5 add}
-   \pscustom[linewidth=0.5pt,fillstyle=solid,fillcolor=lightgray]{%
-     \psplot[linewidth=2pt]{1}{4}{x 0.85 mul 2 sub dup mul 1.5 add}
-     \psline(4,0)(1,0)(1,2.8225)%
-   }
-\end{pspicture} 
+\begin{figure}[htb]
+  \centering
+  \begin{tikzpicture}[domain=0.5:4]
+    \draw[->] (-0.2,0) -- (6.2,0) node[right] {$x$};
+    \draw[->] (0,-1.2) -- (0,6.2) node[above] {$f(x)$};
+    \draw plot (\x,\x*\x-4*\x+5.5) node[right] {$f(x)=
+      (x-2)^{2}+1,5$};
+    \draw[thick] (1,0) -- (1,2.5);
+    \draw[thick] (3,0) -- (3,2.5);
+    \draw[black,fill] (1,2.5) circle (2pt);
+    \draw[black,fill] (3,2.5) circle (2pt);
+  \end{tikzpicture}
+  \caption{Schematische Darstellung der Fläche unterhalb einer Kurve}
+  \label{fig:riemann}
+\end{figure}
 
 Zur Untersuchung dieses Problems braucht man diverse Variablen:
 \begin{description}
