--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -180,13 +180,14 @@ Diese Beziehungen erlernt man durch das Studium der Logik.
 
 \section{Aussagen}
 
-Das grundlegende Element in der Mengenlehre ist eine \highl{Aussage}. Dies ist
-ein Satz, der wahr oder falsch sein kann. In der Regel bezeichnet man eine
-Aussage mit $p$ oder den folgenden Buchstaben im Alphabet und weist einer
-wahren Aussage den Buchstaben $w$ oder einer falschen Aussage den Buchstaben
-$f$ zu. In Formeln heißt das $p\equiv w$ oder $p\equiv f$. Wenn wir nun zwei
-Aussagen $p$ und $q$ betrachten, lassen sich durch Verbindung dieser neue
-Aussagen gewinnen:\index{Aussageverbindung}
+Das grundlegende Element in der Mengenlehre ist eine
+\highl{Aussage}. Dies ist ein Satz, der wahr oder falsch sein kann. In
+der Regel bezeichnet man eine Aussage mit $p$ oder den folgenden
+Buchstaben im Alphabet und weist einer wahren Aussage den Buchstaben
+$w$ wie wahr oder einer falschen Aussage den Buchstaben $f$ wie falsch
+zu. In Formeln heißt das $p\equiv w$ oder $p\equiv f$. Wenn wir nun
+zwei Aussagen $p$ und $q$ betrachten, lassen sich durch Verbindung
+dieser neue Aussagen gewinnen:\index{Aussageverbindung}
 
 \begin{description}
 \item[\highl{Negation}] Als Negation wird die Verneinung einer Aussage
@@ -221,27 +222,27 @@ man einen Satz, in dem eine oder mehrere Variablen $x,y,\dotsc$
 auftreten. Wenn man für die Variablen Objekte einer festliegenden
 Gesamtheit einsetzt, erhält man immer eine Aussage.
 
-\paragraph{Quantifizierung von Aussageformen}
+\subsection{Quantifizierung von Aussageformen}
 Durch folgende sprachliche Gebilde wird die Aussageform
 quantifiziert:
 \begin{itemize}
-\item $\forall\,x$: für alle (wird manchmal auch mit $\bigwedge$ bezeichnet)
-\item $\exists\,x$: es gibt (mind.) ein (wird manchmal auch mit $\bigvee$
+\item $\forall x$: für alle (wird manchmal auch mit $\bigwedge$ bezeichnet)
+\item $\exists x$: es gibt (mindestens) ein (wird manchmal auch mit $\bigvee$
   bezeichnet)
 \end{itemize}
 
-\paragraph{Bausteine der Prädikatenlogik (Quantorenlogik)}
+\subsection{Bausteine der Prädikatenlogik (Quantorenlogik)}
 Diese Bausteine erlauben es uns, Aussagen zu formalisieren und dann auf
 Gültigkeit zu prüfen. Die einzelnen Aussagen werden so zu größeren Einheiten
 verbunden.
 \begin{itemize}
-\item $\forall x (p(x)\Rightarrow q(x))$ Bedeutung: Für jedes $x$ mit der
+\item $\forall x (p(x)\Rightarrow q(x))$ bedeutet, für jedes $x$ mit der
   Eigenschaft $p(x)$ folgt die Eigenschaft $q(x)$.
-\item $\exists x (p(x)\wedge q(x))$ Bedeutung: Es gibt ein $x$ mit der Eigenschaft
-  $p(x)$ \emph{und} der Eigenschaft $q(x)$.
+\item $\exists x (p(x)\wedge q(x))$ bedeutet, es gibt ein $x$ mit der
+  Eigenschaft $p(x)$ \emph{und} der Eigenschaft $q(x)$.
 \end{itemize}
 
-\paragraph{Negation quantorenlogischer Aussagen}
+\subsection{Negation quantorenlogischer Aussagen}
 Es ist sehr oft sinnvoll, die Negation der obigen Aussagen zu betrachten.
 Unten finden sich die aussagenlogischen Äquivalente der Bausteine der
 Prädikatenlogik.
