--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -47,7 +47,7 @@
 \usepackage{todonotes}   % definiert den Befehl \todo{} um sich leicht
                          % Markierungen für offene Aufgaben zu setzen; wird
                          % auch für \help (s.u.) verwendet
-
+\usepackage{mathtools}   % Zur Definition von \abs und \norm
 
 \usetikzlibrary{calc}
 
@@ -125,16 +125,12 @@
 % auszublenden, indem man den Befehl einfach leer definiert
 \newcommand*{\help}[1]{\todo[color=green!40]{#1}}
 
-% Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
+% Um sicherzustellen, dass jeder Betrag/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
-% rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
-% ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
-%\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
-
-% ordentliches :=
-\newcommand*{\coloneqq}{\mathrel{\mathop:}=}
-
+% rechten Striche vergessen und es wird etwas übersichtlicher. Aus
+% mathtools.pdf, z. B. \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
 % In der Vorlesung werden offene Intervallenden durch umgekehrte Klammern
 % dargestellt. In TeX hat wohnt aber dem Klammerzeichen bereits eine Bedeutung
