Abschnitt zu reellen Zahlen überarbeitet
· Körperaxiome zum Zahlkörper |R ergänzt
· Indexeinträge aufgenommen

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -452,11 +452,25 @@ Damit kommen wir zum ersten Satz:
 
 Eine ausführliche Diskussion zu Körpern und deren Eigenschaften wird
 in der linearen Algebra durchgeführt. Unten sind nur einige wichtige
-Ergebnisse für den Zahlkörper $\R$ aufgelistet:
+Ergebnisse für den Zahlkörper $\R$ aufgelistet. In dem Körper sind zwei
+Abbildungen, Addition und Multiplikation, definiert:
+\begin{align*}
+  +&\colon\R\times\R&\rightarrow\R& (a,b)&\rightarrow a+b\\
+  \cdot&\colon\R\times\R&\rightarrow\R& (a,b)&\rightarrow a\cdot b
+\end{align*}
+Dabei gelten bezüglich der Addition folgende Eigenschaften:
 \begin{description}
-\item[Kommutativgesetz] $a \cdot{} b = b \cdot{} a$
-\item[Assoziativgesetz] $(a \cdot{} b) \cdot{} c = a \cdot{} (b
-  \cdot{} c)$
+ \item[Kommutativgesetz] $a+b=b+a$
+ \item[Assoziativgesetz] $(a+b)+c=a+(b+c)$
+ \item[Existenz und Eindeutigkeit des neutralen Elements] Es existiert genau
+  eine Zahl $0$, so dass für alle $a\in\R$ gilt: $a+0=a$.
+ \item[Eindeutigkeit der Lösbarkeit der Gleichung] Zu allen $a\in\R$ gibt es
+  genau ein $x\in \R$ mit $a+x=0$.
+\end{description}
+bezüglich der Multiplikation gelten folgende Eigenschaften:
+\begin{description}
+\item[Kommutativgesetz] $a \cdot b = b \cdot a$
+\item[Assoziativgesetz] $(a \cdot b) \cdot c = a \cdot (b\cdot c)$
 \item[Existenz und Eindeutigkeit des neutralen Elements] Es gibt eine
   von $0$ verschiedene Zahl $1$, so dass für alle reellen Zahlen $a$
   gilt: $a \cdot 1 = a$
@@ -472,11 +486,12 @@ In $\R$ gibt es eine "`Kleinerbeziehung"' $<$ mit folgenden
 Eigenschaften:
 \begin{itemize}
 \item Entweder gilt $a=b$ oder $a<b$ oder $b<a$.
-\item Transitivgesetz: $a<b \wedge b<c \Rightarrow a<c$
-\item Monotoniegesetz der Addition: $a<b \Rightarrow a+c<b+c$
+\item \highl{Transitivgesetz}: $a<b \wedge b<c \Rightarrow a<c$
+\item \highl{Monotoniegesetz} der Addition: $a<b \Rightarrow a+c<b+c$
 \item Monotoniegesetz der Multiplikation: $a<b \wedge 0<c \Rightarrow
   a \cdot c < b \cdot c$\\
-  Gilt $0<a$, so heißt $a$ positiv. Gilt $a<0$, so heißt $a$ negativ.
+  Gilt $0<a$, so heißt $a$ \highl{positiv}. Gilt $a<0$, so heißt $a$
+  \highl{negativ}.
 \end{itemize}
 
 \begin{description}
@@ -500,7 +515,7 @@ bezeichnet. Unten stehen die verschiedenen Arten von Intervallen:
 \item $\lsofint{a,b} \coloneqq \{x \in \R \colon a < x \leq b\}= (a,b]$
 \item $\bsofint{a,b} \coloneqq \{x \in \R \colon a<x<b\}= (a,b)$ \highl[Intervall!offenes]{offenes
   Intervall}
-\item $b-a$ Länge des Intervalls
+\item $b-a$ Länge des Intervalls\index{Intervall!Länge}
 \item $\rsofint{a,\infty} \coloneqq \{x \in \R \colon x \geq a\}$
 \item $\lsofint{\infty,a} \coloneqq \{x \in \R \colon x \leq a\}$
 \end{itemize}
@@ -511,8 +526,8 @@ Der Betrag einer reellen Zahl stellt den Abstand zur Null dar. Für $a \in \R$
 gilt:
 \begin{gather*}\abs{a} \coloneqq
 \begin{cases}
-  a & \text{falls } a \geq 0 \\
-  -a & \text{falls } a<0
+  a &  a \geq 0 \\
+  -a & a<0
 \end{cases}\end{gather*}
 
 Man nennt $\abs{a}$ den \highl[Betrag!absoluter]{absoluten Betrag} oder einfach
@@ -524,10 +539,10 @@ und entspricht dem Maximum von $a$ und $-a$.
 \begin{enumerate}
 \item $\abs{a} =0 \Leftrightarrow a=0$. Dies ergibt sich sofort aus
   der obigen Definition.
-\item Homogenität: $\abs{ab} = \abs{a}\abs{b}$. Dazu machen wir klar,
+\item \highl{Homogenität}: $\abs{ab} = \abs{a}\abs{b}$. Dazu machen wir klar,
   dass die Beziehung $\abs{a} = \abs{-a}$ gilt. Denn $\abs{a}=
   \max\{a,-a\}=\max\{-a,-(-a)\}=\abs{-a}$.
-  \begin{enumerate}[1.~F{a}ll]
+  \begin{enumerate}[1.\,F{a}ll]
   \item Seien $a$ und $b$ eine reelle Zahlen, die beide größer oder
     gleich Null sind. Dann gilt: $\abs{ab}=ab=\abs{a}\abs{b}$.
   \item Sei nun $a<0$ und $b \geq 0$. Dann gilt, $\abs{ab} =-(ab)
@@ -562,18 +577,20 @@ und entspricht dem Maximum von $a$ und $-a$.
 \end{enumerate}
 
 \subsection{Vollständigkeitsaxiom}
-\begin{definition}
+\begin{definition}[nach oben beschränkt]
   Eine Menge $M \subset \R$ heißt genau dann \highl[beschränkt!nach oben]{nach oben
     beschränkt}, wenn es eine reelle Zahl $S \in \R$ gibt, dass  $x \leq S$
   für alle $x \in M$ gilt:
-  \begin{gather*}M\subset\R\perdef\,\exists S\in\R\,\forall x \in M\colon x\leq S\end{gather*}
+  \begin{gather*}
+    M\subset\R\perdef\,\exists S\in\R\,\forall x \in M\colon x\leq S
+  \end{gather*}
 \end{definition}
 
-\begin{definition}
+\begin{definition}[Obere Schranke]
   In dem Fall heißt $S$ \highl[Schranke!obere]{obere Schranke} von $M$.
 \end{definition}
 
-\begin{definition}
+\begin{definition}[Supremum]
   Weiterhin heißt $S \in \R$ genau dann \highl{Supremum}\footnote{Bezeichnung:
   $S=\sup M$} oder \highl[Schranke!kleinste obere]{kleinste obere Schranke}
   von $M$, wenn gilt:
@@ -593,7 +610,7 @@ auch $S_2 \leq S_1$. Daraus folgt nun aber $S_1= S_2$.
   \Rightarrow \sup M \in \R)$
 \end{theorem}
 
-\begin{remark}
+\begin{remark}[Maximum]
   Über die Zugehörigkeit von $S=\sup M$ zur Menge $M$ wird nichts
   ausgesagt. Gilt $S \in M$, so schreibt man auch $\max M$ und $S$
   heißt \highl{Maximum} von $M$ oder formal  $S=\max M
@@ -638,8 +655,8 @@ unten]{nach unten beschränkt}, wenn für alle $x\in M$ ein $s\in\R$
 existiert, dass gilt: $x \geq s$. Das $s$ heißt genau dann
 \highl{Infimum}\footnote{Schreibweise: $s=\inf M$}, wenn gilt:
 \begin{enumerate}
-\item Die Zahl $s$ ist untere Schranke
-\item Die Zahl $s$ ist größte untere Schranke
+\item Die Zahl $s$ ist untere Schranke.
+\item Die Zahl $s$ ist größte untere Schranke.
 \end{enumerate}
 
 \begin{theorem}
