--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -2554,110 +2554,120 @@ Sei $f\colon D\rightarrow Y$ und $a \in D$. Die Funktion $f$ heißt genau dann
 \end{remark}
 
 \section{Stetigkeit, offene und abgeschlossene Mengen}
-\begin{definition}
+\begin{definition}[Offene, abgeschlossene Menge]
 Sei $X$ ein metrischer Raum.
 \begin{enumerate}[(1)]
-\item $O\subset X$ heißt genau dann \emph{offen\index{Menge!offene}},
+\item Eine Menge $O\subset X$ heißt genau dann
+  \highl[Menge!offene]{offen\index{offen}},
   wenn es zu jedem Element in $O$ eine $\varepsilon$-Kugel um dieses
   Element gibt, die ebenfalls ganz in $O$ liegt.
-  \begin{gather*}\forall x\in O\colon\mathring{B_{\varepsilon}}(x)\subset O\end{gather*}
-\item $A\subset X$ heißt genau dann
-  \emph{abgeschlossen\index{Menge!abgeschlossene}}, wenn
+  \begin{gather*}
+    \forall x\in O\colon\mathring{B_{\varepsilon}}(x)\subset O
+  \end{gather*}
+\item Eine Menge $A\subset X$ heißt genau dann
+  \highl[Menge!abgeschlossene]{abgeschlossen\index{abgeschlossen}}, wenn
   $X\backslash A$ offen ist.
 \end{enumerate}
 \end{definition}
-Beispiele:
-\begin{enumerate}[(i)]
+
+\begin{beispiel}
+  \begin{enumerate}[(i)]
   \item $\emptyset, X$ sind offen und abgeschlossen
     \begin{itemize}
       \item $X$ offen: klar!
       \item $\emptyset$ offen: Sei $\emptyset$ nicht offen, dann gilt
         $\exists x_0\in \emptyset$ \lightning $\forall \varepsilon>0\colon
-        \stackrel{o}{B_{\varepsilon}}(x_0)\cap (X\backslash
+        \mathring{B_{\varepsilon}}(x_0)\cap (X\backslash
         \emptyset)\neq \emptyset$\lightning 
       \item $X$ ist abgeschlossen, da $X\backslash X=\emptyset$. Die leere Menge ist offen.
       \item $\emptyset$ ist abgeschlossen, da $X\backslash \emptyset=X$. $X$ ist offen.
     \end{itemize}
-  \item $r\geq 0\quad \stackrel{o}{B_r}(a)$ ist offen und $B_r(a)$ ist abgeschlossen.
+  \item Für $r\geq 0$ ist $\mathring{B_r}(a)$ offen und $B_r(a)$ abgeschlossen.
 \end{enumerate}
+\end{beispiel}
 
-\begin{theorem}
-\label{satz:abgTeilmenge}
-Eine Teilmenge $A\subseteq X$ ist genau dann abgeschlossen, wenn $\forall (x_n) \subset A\colon(x_n)$
-konvergent $\Rightarrow \lim x_n \in A$.\\
-\textbf{Beweis}
-\begin{itemize}
-  \item["`$\Rightarrow$"'] Der Beweis erfolgt durch Kontraposition: Sei $A$ abgeschlossen\\
-    Annahme: $\exists (x_n)\subset A\colon(x_n) \text{ konvergent} \Rightarrow \lim x_n \notin A$\\
-    $a\coloneqq\lim x_n$\\
-    $\Rightarrow a \in X\backslash A$ offen, da $A$ nach Voraussetzung abgeschlossen.\\
-    $\Rightarrow \exists \varepsilon >0 \stackrel{o}{B_{\varepsilon}}(a)\subset X\backslash A$\\
-    Da $x_n$ gegen $a$ strebt, existiert ein $n_0\in \N$, so dass $d(x_n,a)<\varepsilon$ für $n\geq n_0$\\
-    $\Rightarrow x_n \in \stackrel{o}{B_{\varepsilon}}(a)$\textnormal{\lightning}
-  \item["`$\Leftarrow$"'] Sei $\forall (x_n)\subset A\colon x_n \text{ konvergent} \Rightarrow \lim x_n \in A$\\
-    Annahme: $A$ ist offen. Dann ist zu zeigen:
+\begin{theorem}\label{satz:abgTeilmenge}
+  Eine Teilmenge $A\subseteq X$ ist genau dann abgeschlossen, wenn $\forall
+  (x_n) \subset A\colon(x_n)$ konvergent $\Rightarrow \lim x_n \in A$.
+  \begin{proof}
+    \begin{itemize}
+     \item["`$\Rightarrow$"'] Der Beweis erfolgt durch Kontraposition: Sei $A$
+      abgeschlossen. Dann nehmen wir an, dass $\exists (x_n)\subset
+      A\colon(x_n) \text{ konvergent} \Rightarrow \lim x_n \notin A$. Wir
+      setzen $a\coloneqq\lim x_n$ und es folgt, $a \in X\backslash A$ ist
+      offen, da $A$ nach Voraussetzung abgeschlossen ist. Also existiert ein
+      $\varepsilon >0 \mathring{B_{\varepsilon}}(a)\subset X\backslash A$. Da
+      $x_n$ gegen $a$ strebt, existiert ein $n_0\in \N$, so dass
+      $d(x_n,a)<\varepsilon$ für $n\geq n_0$ und es folgt, $x_n \in
+      \mathring{B_{\varepsilon}}(a)$\lightning
+     \item["`$\Leftarrow$"'] Sei $\forall (x_n)\subset A\colon x_n$ konvergent
+      $\Rightarrow \lim x_n \in A$. Wir nehmen an, $A$ ist offen. Dann ist zu
+      zeigen:
     \begin{align*}
-      A \text{ abgeschlossen} & \Leftrightarrow & X\backslash A \text{ offen}\\
-      & \Leftrightarrow & \forall x \in X\backslash A \exists \varepsilon >0\colon\stackrel{o}{B_{\varepsilon}}
+      A \text{ abgeschlossen} &\Leftrightarrow X\backslash A \text{ offen}\\
+      &\Leftrightarrow \forall x \in X\backslash A \exists \varepsilon >0\colon\mathring{B_{\varepsilon}}
       (x)\subseteq X\backslash A\\
-      & \Leftrightarrow & \forall x \in X\backslash A \exists \varepsilon >0\colon\stackrel{o}{B_{\varepsilon}}
+      &\Leftrightarrow \forall x \in X\backslash A \exists \varepsilon >0\colon\mathring{B_{\varepsilon}}
       (x)\cap A = \emptyset
     \end{align*}
-    $\Rightarrow \exists x_0 \in X\backslash A \forall \varepsilon >0\colon\stackrel{o}{B_{\varepsilon}}(x_0)
-    \cap A \neq \emptyset$\\
-    Insbesondere existiert ein $x_n \in A \colon d(x_n,x_0)<\frac{1}{n}$\\
-    $\stackrel{Voraussetzung}{\Longrightarrow}x_0=\lim x_n \in A$\textnormal{\lightning}
-\end{itemize}
-\qed
+    $\Rightarrow \exists x_0 \in X\backslash A \forall \varepsilon
+      >0\colon\mathring{B_{\varepsilon}}(x_0) \cap A \neq \emptyset$.
+      Insbesondere existiert ein $x_n \in A \colon d(x_n,x_0)<\frac{1}{n}$.
+      Nach Voraussetzung folgt, $x_0=\lim x_n \in A$\lightning
+    \end{itemize}
+  \end{proof}
 \end{theorem}
 
-\textbf{Korollar} Sei $A'$ die Menge der Häufungspunkte von $A$. Dann ist $A$ genau dann abgeschlossen, wenn
-$A'$ eine Teilmenge von $A$ ist.\\
-\textbf{Beweis}
-\begin{itemize}
-  \item["`$\Rightarrow$"'] Sei $a\in A'$. Dann existiert $x_n \subset A, x_n\neq a, x_n\rightarrow a
-    \Rightarrow a \in A$
-  \item["`$\Leftarrow$"'] Annahme: $A$ ist nicht abgeschlossen.\\
-    $\Rightarrow \exists (x_n) \subset A, (x_n)$ ist konvergent, aber $\lim x_n\in A$\\
-    $\Rightarrow a$ ist Häufungspunkt von $A$\\
-    $\Rightarrow A'\not\subset A$\lightning
+\begin{lemma}
+  Sei $A'$ die Menge der Häufungspunkte von $A$. Dann ist $A$ genau dann
+  abgeschlossen, wenn $A'$ eine Teilmenge von $A$ ist
+  \begin{proof}
+    \begin{itemize}
+     \item["`$\Rightarrow$"'] Sei $a\in A'$. Dann existiert $x_n \subset A,
+      x_n\neq a, x_n\rightarrow a \Rightarrow a \in A$.
+  \item["`$\Leftarrow$"'] Annahme: $A$ ist nicht abgeschlossen. Dann existiert
+      $(x_n) \subset A, (x_n)$ ist konvergent, aber $\lim x_n\in A$. Also ist
+      $a$ Häufungspunkt von $A$ und $A'\not\subset A$\lightning
 \end{itemize}
-\qed
+  \end{proof}
+\end{lemma}
 
-\begin{theorem}
-\label{satz:fkt-aquiv}
-Seien $X,Y$ metrische Räume und $f\colon D\rightarrow Y$. Dann sind folgende Aussagen äquivalent:
-\begin{enumerate}[(1)]
-  \item $f$ ist stetig auf $X$.
-  \item $\forall O \subset Y$ offen $\colon f^{-1}(O)$ offen
-  \item $\forall A \subset Y$ abgeschlossen $\colon f^{-1}(A)$ abgeschlossen
-\end{enumerate}
-\end{theorem}
-\textbf{Beweis}
-\begin{itemize}
-  \item[$(1)\Rightarrow (2)$] Sei $O\subset Y$ offen, $x\in f^{-1}(O)\Leftrightarrow f(x)\in O$\\
-    $\stackrel{O \text{ offen}}{\Longrightarrow} \exists \varepsilon >0\colon\stackrel{o}{B_{\varepsilon}}
-    (f(x))\subset O$\\
-    $\stackrel{f \text{ stetig}}{\Longrightarrow} \exists \delta >0\colon f(\stackrel{o}{B_{\delta}}(x))\subset
-    \stackrel{o}{B_{\varepsilon}}(f(x))\subset O$\\
-    $\Longrightarrow \stackrel{o}{B_{\delta}}(x)\subset f^{-1}(O)$
-  \item[$(2)\Rightarrow (1)$] Sei $x\in X, \varepsilon
-    >0\stackrel{(2)}{\Rightarrow} f^{-1}(\stackrel{o}
-    {B_{\varepsilon}}(f(x)))$ offen\\
-    $\Rightarrow \exists \delta >0\colon\stackrel{o}{B_{\delta}}(x)\subset
-    f^{-1}(\stackrel{o}
-    {B_{\varepsilon}}(f(x)))$\\
-    $\Rightarrow f(\stackrel{o}{B_{\delta}}(x))\subset
-    \stackrel{o}{B_{\varepsilon}} (f(x)) \Rightarrow f$ stetig
-  \item[$(2)\Leftrightarrow (3)$] $f^{-1}(Y\backslash M)=f^{-1}(Y)\backslash f^{-1}(M)=x\backslash f^{-1}(M)$
-  \item[$(2)\Rightarrow (3)$] Sei $A$ abgeschlossen. $O=Y\backslash A$ offen $\Leftrightarrow A=Y
-    \backslash O$\\
-    $f^{-1}(A)=f^{-1}(Y)\backslash f^{-1}(O)=X\backslash \underbrace{f^{-1}(O)}_{offen} \Rightarrow$
-    abgeschlossen
-  \item[$(3)\Rightarrow (2)$] Sei $O$ offen. Dann ist $A=Y\backslash O$ abgeschlossen. $\Rightarrow f^{-1}
-    (A)=X\backslash \underbrace{f^{-1}(O)}_{offen} \Rightarrow$ abgeschlossen.
+\begin{theorem}\label{satz:fkt-aquiv}
+  Seien $X,Y$ metrische Räume und $f\colon D\rightarrow Y$. Dann sind folgende
+  Aussagen äquivalent:
+  \begin{enumerate}[(1)]
+   \item $f$ ist stetig auf $X$.
+   \item $\forall O \subset Y$ offen $\colon f^{-1}(O)\coloneqq\{x\in X\colon
+    f(x)\in O\}$ offen.
+   \item $\forall A \subset Y$ abgeschlossen $\colon f^{-1}(A)$ abgeschlossen.
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item[(1)$\Rightarrow$ (2)] Sei $O\subset Y$ offen, $x\in
+      f^{-1}(O)\Leftrightarrow f(x)\in O$. Da $O$ offen ist, gibt es ein
+      $\varepsilon >0\colon\mathring{B_{\varepsilon}} (f(x))\subset O$. Wegen
+      der Stetigkeit von $f$ haben wir $\exists \delta >0\colon
+      f(\mathring{B_{\delta}}(x))\subset
+      \mathring{B_{\varepsilon}}(f(x))\subset O \Longrightarrow
+      \mathring{B_{\delta}}(x)\subset f^{-1}(O)$.
+     \item[(2)$\Rightarrow$ (1)] Sei $x\in X, \varepsilon >0$. Aus der zweiten
+      Aussage folgt, $f^{-1}(\mathring {B_{\varepsilon}}(f(x)))$ ist offen.
+      Damit existiert ein $\delta >0\colon\mathring{B_{\delta}}(x)\subset
+      f^{-1}(\mathring {B_{\varepsilon}}(f(x)))\Rightarrow
+      f(\mathring{B_{\delta}}(x))\subset \mathring{B_{\varepsilon}} (f(x))
+      \Rightarrow f$ stetig.
+     \item[(2)$\Leftrightarrow$ (3)] $f^{-1}(Y\backslash
+      M)=f^{-1}(Y)\backslash f^{-1}(M)=x\backslash f^{-1}(M)$
+     \item[(2)$\Rightarrow$ (3)] Sei $A$ abgeschlossen. Dann ist
+      $O=Y\backslash A$ offen $\Leftrightarrow A=Y\backslash O$. Also ist
+      $f^{-1}(A)=f^{-1}(Y)\backslash f^{-1}(O)=X\backslash
+      \underbrace{f^{-1}(O)}_{\text{offen}}$ abgeschlossen.
+     \item[(3)$\Rightarrow$ (2)] Sei $O$ offen. Dann ist $A=Y\backslash O$
+      abgeschlossen. Also folgt, $f^{-1}(A) =X\backslash
+      \underbrace{f^{-1}(O)}_{\text{offen}}$ abgeschlossen.
 \end{itemize}
-\qed
+  \end{proof}
+\end{theorem}
 
 \section{Stetigkeit und kompakte Mengen}
 \begin{definition}
