--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -3113,8 +3113,56 @@ produzieren. In \autoref{fig:syntax-sicht} ist das Syntaxdiagramm dargestellt.
   über \emph{eine} Maschinenistruktion realisiert ist?
 \end{exe}
 
+\section{Übungsblatt 5}
 
+\begin{exe}[Einbettung]
+  Datenbanksprachen (z.\,B. SQL) werden in höhere Programmiersprachen
+  (z.\,B. Java, C++, teils gar COBOL, PL/1, schröcklich)
+  eingebettet. Weitere anschauliche Details uber die Kopplungsarten
+  von Programmier- und Datenbanksprachen finden sich in dem zur
+  Vorlesung ausgehändigten Informatik"=Spektrum"=Papier von Karl
+  Neumann.
+  \begin{enumerate}[a)]
+  \item Erläutern Sie, \emph{warum} eine solche Einbettung überhaupt
+    vorgenommen wird.
+  \item Welche Probleme treten bei der Einbettung auf?
+  \item Welche prinzipiellen Ansätze für eine
+    Programmierspracheneinbettung gibt es?
+  \item Welchem dieser Ansätze ist ESQL zuzuordnen?
+  \end{enumerate}
+\end{exe}
 
+\begin{exe}[Impedance Mismatch und Cursor]
+  Cursor spielen in eingebettetem SQL eine wichtige Rolle. Testen Sie
+  Ihr umfangreiches Wissen durch Beantwortung der folgenden Fragen.
+  \begin{enumerate}[a)]
+  \item Was versteht man unter \emph{Impedance Mismatch}?
+  \item Was versteht man in diesem Zusammenhang unter \emph{Cursor}?
+    Beschreiben Sie das Wesentliche am Cursor"=Konzept.
+  \item An was (an welches Konstrukt) wird ein Cursor gebunden?
+  \item Was passiert bei \texttt{DECLARE CURSOR}?
+  \item Was passiert bei \texttt{OPEN CURSOR}?
+  \item Was passiert bei \texttt{FETCH}?
+  \item Wann wird die \texttt{SELECT}"=Anweisung ausgeführt und wo
+    steht der Cursor nach der Ausführung? Warum steht er da und wie lange?
+  \item Wird bei ESQL stets ein Cursor benötigt?
+  \end{enumerate}
+\end{exe}
+
+\begin{exe}[\texttt{UPDATE}"=Operation und Cursor]
+  Cursor spielen in SQL nicht nur beim lesenden Zugriff aufs
+  Anfrageergebnis eine Rolle. Auch die SQL"=\texttt{UPDATE}"=Operation
+  kann Bezug auf den Cursor nehmen.
+  \begin{enumerate}[a)]
+  \item Wie nennt man diese Form des \texttt{UPDATE}?
+  \item Erläutern Sie die Form des \texttt{UPDATE} an einem Beispiel.
+  \item Können Sie die Form des \texttt{UPDATE} durch Eingabe von
+    Ad"=Hoc"=Anweisungen am Bildschirm testen?
+  \item Wie unterscheidet sich diese Form des \texttt{UPDATE} vom
+    "`gewöhnlichen"' \texttt{UPDATE} (also dem \texttt{UPDATE} ohne
+    Bezugnahme auf den Cursor)?
+  \end{enumerate}
+\end{exe}
 
 
 
