Manuellen Kreis über B durch mathring ersetzt
Ich hatte bisher \stackrel{\circ}{B} für ein B mit einem Kringel darüber
verwendet. \mathring{B} ist die korrekte Version. Daher wurden alle
Vorkommen ersetzt.

Signed-off-by: Jens Kubieziel <jens@kubieziel.de>

git-svn-id: https://svn.lug-jena.de/uni-skripte@3047 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -2140,11 +2140,12 @@ Sei $D\subset X, f\colon D\rightarrow Y$. $f$ ist genau dann im Punkt $a\in D$ s
 \begin{gather*}\forall \varepsilon >0 \exists \delta_{\varepsilon}(a)>0 \forall x \in D\colon d(x,a)<\delta_{\varepsilon}
 (a)\Rightarrow  \tilde{d}(f(x),f(a))<\varepsilon\end{gather*}
 In Worten: $f(x)$ weicht beliebig wenig von $f(a)$ ab, falls nur $x$ hinreichend nahe bei $a$ liegt oder 
-zu jeder $\varepsilon$-Kugel $\stackrel{\circ}{B_{\varepsilon}}(f(a))$ existiert eine $\delta_{\varepsilon}$
--Kugel relativ zu $D$ mit $f(\stackrel{\circ}{B_{\varepsilon}}\cap D)\subset \stackrel{\circ}{B_{\varepsilon}}
+zu jeder $\varepsilon$-Kugel $\mathring{B_{\varepsilon}}(f(a))$ existiert eine $\delta_{\varepsilon}$
+-Kugel relativ zu $D$ mit $f(\mathring{B_{\varepsilon}}\cap D)\subset \mathring{B_{\varepsilon}}
 (f(a))$.
-\begin{gather*}\forall \varepsilon >0 \exists \delta_{\varepsilon}>0\colon f(\stackrel{\circ}{B_{\delta_{\varepsilon}}}(a)
-\cap D) \subset \stackrel{\circ}{B_{\varepsilon}}(f(a))\end{gather*}
+\begin{gather*}\forall \varepsilon >0 \exists \delta_{\varepsilon}>0\colon
+  f(\mathring{B_{\delta_{\varepsilon}}}(a)
+\cap D) \subset \mathring{B_{\varepsilon}}(f(a))\end{gather*}
 \end{theorem}
 \textbf{Beweis}
 \begin{itemize}
@@ -2234,7 +2235,7 @@ Sei $X$ ein metrischer Raum.
 \item $O\subset X$ heißt genau dann \emph{offen\index{Menge!offene}},
   wenn es zu jedem Element in $O$ eine $\varepsilon$-Kugel um dieses
   Element gibt, die ebenfalls ganz in $O$ liegt.
-  \begin{gather*}\forall x\in O\colon\stackrel{\circ}{B_{\varepsilon}}(x)\subset O\end{gather*}
+  \begin{gather*}\forall x\in O\colon\mathring{B_{\varepsilon}}(x)\subset O\end{gather*}
 \item $A\subset X$ heißt genau dann
   \emph{abgeschlossen\index{Menge!abgeschlossene}}, wenn
   $X\backslash A$ offen ist.
