Erläuterung zu ACID

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -68,6 +68,7 @@
 \usetikzlibrary{chains,positioning,scopes,trees}
 \usepackage[alsoload=binary]{siunitx}
 \usepackage{tabularx}
+\usepackage{eurosym}
 
 \lstdefinelanguage{IMS}%
 {morekeywords={DBD, SEGM, FIELD, END,PCB,SENSEG,SENFLD,PSBGEN}}
@@ -2653,8 +2654,10 @@ produzieren. In \autoref{fig:syntax-sicht} ist das Syntaxdiagramm dargestellt.
     dem Abschluss einer Transaktion müssen vom DBMS rekonstruierbar
     sein.
   \end{description}
-  Die obigen Regeln werden gemäß ihrer englischsprachigen Initialen
-  als \highl{ACID}"=Eigenschaften bezeichnet.\footnote{Die
+  Die obigen Regeln werden gemäß ihrer englischsprachigen
+  Initialen\footnote{\emph{A}tomicity, \emph{C}onsistency,
+    \emph{I}solation, \emph{D}urability} als
+  \highl{ACID}"=Eigenschaften bezeichnet.\footnote{Die
     ACID"=Eigenschaften wurden erstmalig 1983 von den Forschern
     \textsc{Theo Härder} und \textsc{Andreas Reuter} in den ACM
     Computing Surveys formuliert.}
@@ -2785,7 +2788,7 @@ produzieren. In \autoref{fig:syntax-sicht} ist das Syntaxdiagramm dargestellt.
 \begin{exe}[Verschiedenes]
   \begin{enumerate}[a)]
   \item Was machen die beiden ACID"=Erfinder heute, d.\,h. wo sind sie
-    tätig?
+    tätig? \highl{foo}.
   \item Wer war der Vater der Transaktionsthematik? Was macht er
     heute? Wo war er zuletzt tätig?
   \end{enumerate}
