--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -2679,6 +2679,54 @@ produzieren. In \autoref{fig:syntax-sicht} ist das Syntaxdiagramm dargestellt.
   Bestand haben, sobald das DBMS diese verarbeitet (Commit) hat.
 \end{bemerk}
 
+\section{Fehlerszenarien}
+
+Mit zunehmendem Desaster unterscheidet man Transaktions-, System- und
+Externspeicherversagen. Im folgenden sollen diese Begriffe erklärt
+werden.
+
+\begin{defini}[Transaktionsversagen]
+  Ein \highl{Transaktionsversagen} liegt vor, wenn eine
+  \emph{einzelne} Transaktion nicht ihr normales Ende erreicht,
+  sondern abbricht.
+\end{defini}
+
+\begin{bemerk}
+  Der Abbruch kann durch den Benutzer, die Anwendung oder durch das
+  DBMS geschehen. Die Gründe für den Abbruch sind in der Regel
+  vielfältig:
+  \begin{itemize}
+  \item Benutzer hat einen Fehler bemerkt.
+  \item Anwendungsprogramm ist "`abgestürzt"'.
+  \item Eingabedaten waren inkorrekt und die Anwendung bricht ab.
+  \item Deadlock (Verklemmung)
+  \end{itemize}
+\end{bemerk}
+
+\begin{defini}[Systemversagen]
+  Ein \highl{Systemversagen} liegt vor, wenn das DBMS "`abstürzt"',
+  d.\,h. die gesamte Verarbeitung in der Datenbank wird unterbrochen.
+\end{defini}
+
+\begin{bemerk}
+  Bei einem Systemversagen sind alle laufenden Transaktionen und
+  eventuell mehr (bereits abgeschlossene Transaktionen) betroffen. Die
+  Gründe liegen in einem Fehler des DBMS, des Betriebssystems oder
+  einem Hardwarefehler. Daraus resultiert, dass die Inhalte des
+  Hauptspeichers verloren sind. Bereits auf der Festplatte
+  gespeicherte Inhalte bleiben erhalten.
+\end{bemerk}
+
+\begin{defini}[Externspeicherversagen]
+  Ein \highl{Externspeicherversagen} liegt vor, wenn Daten auf dem
+  Externspeicher verloren sind. Die Datenbank ist ganz oder teilweise
+  zerstört.
+\end{defini}
+
+Wie wollen nun herausfinden, wie sich die ACID"=Eigenschaften dennoch
+erhalten lassen. Insbesondere die Atomarität und die Dauerhaftigkeit
+sind von Interesse..
+
 \clearpage
 \appendix
 
