--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -2725,7 +2725,130 @@ werden.
 
 Wie wollen nun herausfinden, wie sich die ACID"=Eigenschaften dennoch
 erhalten lassen. Insbesondere die Atomarität und die Dauerhaftigkeit
-sind von Interesse..
+sind von Interesse.
+
+\section{Klassifikation von Fehlerbehandlungsmaßnahmen}
+
+\subsection{Fehlerbehandlung für Transaktionsversagen}
+
+Im Falle des Transaktionsversagens setzt das DBMS alle betroffenen
+Transaktionen auf ihren Anfangszustand zurück. Änderungen am Zustand
+der Datenbank werden zurückgenommen. Dies wird als
+\highl[Transaktion!Rollback]{Rollback der Transaktion} oder
+\highl[Rollback]{Transaction Rollback} bezeichnet. Die Maßnahme dient
+dazu, die Atomarität zu garantieren.
+
+Zur Umsetzung protokolliert das DBMS Änderungen am Zustand der
+Datenbank in Form von Tupel vor der Änderung (\highl{Before Image})
+und Tupel nach der Änderung (\highl{After Image}). Diese werden als
+\highl{Log-Datei} auf die Festplatte geschrieben. Die Tupel vor einer
+Änderung können dann zum Rollback verwendet werden. Ein Rollback
+geschieht automatisch durch das DBMS.
+
+\subsection{Fehlerbehandlung für Systemversagen}
+
+Ein DBMS führt verschiedene Transaktionen durch. Bei der Ausführung
+zweier Transaktionen kommt es zu einem Absturz des Systems. Was ist
+bei einem Neustart zutun?
+
+Die Transaktionen, die während des Absturzes aktiv waren, müssen zur
+Erhaltung der Atomarität zurückgesetzt werden. Hierzu bedient sich das
+System, wie oben beschrieben, der Tupel vor Änderung. Unter Umständen
+müssen bereits abgeschlossene Transaktionen "`nachgefahren"',
+d.\,h. wieder ausgeführt werden. In der Regel bezeichnet man dies als
+\texttt{REDO}.
+
+Betriebssysteme schreiben Änderungen nicht sofort auf die
+Festplatte. Vielmehr werden die Daten in einem Puffer  gehalten und
+erst geschrieben, wenn der Puffer voll ist bzw. wenn das
+Betriebssystem "`Zeit dazu hat"'. Daher könnte es sein, dass
+Transaktionen, die das DMS als abgeschlossen markiert hat, vor dem
+Crash noch nicht persistent geschrieben wurden. Die After Images
+helfen, Transaktionen nachzufahren.
+
+Jedoch ist unklar, wie weit in der Vergangenheit mit dem Nachfahren
+begonnen werden muss. Die todsichere Variante wäre den Startpunkt des
+DBMS selbst anzusetzen. Jedoch war das System unter Umständen mehrere
+Tage oder Wochen aktiv und hat viele Transaktionen abgeschlossen. Ein
+\texttt{REDO}  wäre in dem Falle sehr aufwändig.
+
+Eine Lösung heißt \highl{Checkpoint} oder
+\highl{Sicherungspunkt}. In regelmäßigen Abständen wird der
+Pufferinhalt komplett in die Datenbank geschrieben. Beim Nachfahren
+muss das DBMS somit nicht über den aktuellsten Sicherungspunkt in die
+Vergangenheit gehen.
+
+In der Praxis erfolgt das Schreiben sowohl an den Sicherungspunkten
+wie auch zu anderen nicht vorhersehbaren Zeitpunkten. Verschiedene
+DBMS schreiben proaktiv Daten auf den Speicher. Die Daten umfassen
+sowohl abgeschlossene wie noch offene Transaktionen. Daten aus offenen
+Transaktionen bezeichnet man als \highl[Daten!schmutzige]{"`schmutzige
+Daten"'}. Diese "`stehlen"' sich durch das Schreiben davon. Daher
+heißt die Strategie \highl{Steal-Strategie}.
+
+\highl{Write-Ahead-Logging} (\highl{WAL}) ist das Schreiben eines
+Log"=Eintrags \emph{vor} dem Datenblock. Dies sichert die
+Rücksetzbarkeit der Transaktion.
+
+\subsection{Fehlerbehandlung für Externspeicherversagen}
+
+Die Fehlerbehandlung für Externspeicherversagen erfolgt durch das
+Anlegen von Kopien der Datenbank (\highl{Backup}) sowie durch das
+Protokollieren aller Änderungen durch After Images.
+
+Im Fehlerfall lädt der Datenbankadministrator die Kopie der Datenbank
+und lässt darauf alle abgeschlossenen Transaktionen nachfahren. Nach
+Abschluss befindet sich das DBMS wieder in einem konsistenten
+Zustand. 
+
+\subsection{Größe der Log-Dateien}
+
+Eine Log"=Datei kann theoretisch beliebig groß werden. Die natürliche
+Grenze ist die Größe des Datenspeichers. Unter ungünstigen Umständen
+reagiert das Betriebssystem mit Stillstand oder Absturz auf
+vollständig gefüllte Datenspeicher. Eventuell verweigert auch das DBMS
+seinen Dienst. Daher ist der Zustand nicht erstrebenswert. Wie lässt
+sich das verhindern?
+
+Die Log"=Daten für einen \texttt{UNDO} (Before Images) von
+abgeschlossenen Transaktionen werden nicht mehr benötigt. Denn
+abgeschlossene Transaktionen können nicht mehr zurückgerollt
+werden. Auch Log"=Daten für einen \texttt{REDO} (After Images), die
+vor dem letzten Sicherungspunkt angelegt wurden, werden nicht mehr
+gebraucht. Können die Log"=Dateien unter Beachtung der vorstehenden
+Regeln verworfen werden?
+
+Eine Antwort fällt nicht ganz eindeutig aus. In der praktischen
+Umsetzung werden die Before und After Images in einer Datei
+geführt. Das erschwert das selektive Verwerfen. Weiterhin braucht man
+\texttt{REDO}"=Dateien für das Externspeicherversagen. Daher können
+diese nicht so schnell verworfen werden.
+
+DB2 löst dies durch langfristiges Aufheben der
+\texttt{REDO}"=Dateien. Sie werden auf einen langsamen Tertiärspeicher
+kopiert und aufbewahrt. Kurzfristiger benötigte Dateien verbleiben auf
+dem Speichermedium und werden regelmäßig überschrieben oder gelöscht.
+
+\subsection{Schreibstrategien eines DBMS}
+
+Untenstehend wurde einige Merkmale zur Klassifikation aus
+\cite{haereu83} herausgegriffen:
+\begin{description}
+\item[force/no force] Bei \highl{force} werden die Daten spätestens
+  beim Ende der Transaktion auf die Platte geschrieben. Dagegen
+  geschieht das Schreiben bei \highl{no force} zu einem nicht
+  definierten Zeitpunkt. Produkte bevorzugen die No"=Force"=Strategie.
+\item[steal/no steal] Bei \highl{steal} "`stehlen"' sich die Daten
+  schon im Verlauf einer Transaktion aus dem Puffer. Schreiben nach
+  dem Ende der Transaktion ("`saubere"' Daten) heißt \highl{no
+    steal}. In der Praxis ist steal verbreitet.
+\item[atomic/not atomic] Hierbei geht es um das Schreiben der Daten
+  auf die Datenbank, nicht um das "`A"' aus den
+  ACID"=Eigenschaften. Punktuelles Wegschreiben der Daten heißt
+  \highl{atomic}. Damit befindet sich der Speicher immer in einem
+  wohldefinierten Zustand. Das kontinuierliche Schreiben heißt
+  \highl{not atomic}.
+\end{description}
 
 \clearpage
 \appendix
@@ -3449,6 +3572,9 @@ sind von Interesse..
 \bibitem{imsprimer} \textsc{Rick Long}, \textsc{Mark Harrington},
   \textsc{Robert Hain}, \textsc{Geoff Nichols}: IMS Primer. IBM,
   2000. \url{http://www.redbooks.ibm.com/redbooks/pdfs/sg245352.pdf}
+\bibitem{haereu83} \textsc{Theo Härder}, \textsc{Andreas Reuter}:
+  Principles of Transaction-oriented Database Recovery. ACM Computing
+  Surveys, Vol.\,15, No.\,4, Dezember 1983.
 \end{thebibliography}
 
 \clearpage
