Ziel der TA-Ausführung
git-svn-id: https://svn.lug-jena.de/uni-skripte@3057 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -2922,6 +2922,20 @@ Insgesamt lässt sich sagen, dass Synchronisation im
 Mehrbenutzerbetrieb benötigt wird. Das Sperren ist \emph{eine}
 Möglichkeit, die Probleme zu lösen.
 
+\section{Ziel der Transaktionsausführung}
+\label{sec:ziel-der-trans}
+
+Dem Benutzer soll Einbenutzerbetrieb bei Mehrbenutzerbetrieb
+vorgespiegelt werden. Er soll den Eindruck erhalten, dass er allein
+auf der Datenbank arbeitet. Trotz Mehrbenutzerbetriebs in der Praxis
+sollen nur solche Zustände erzeugt werden, die auch bei serieller
+Abarbeitung der Transaktionsmenge entstehen können. Man bezeichnet
+diese als Kriterien der Serialisierbarkeit. Eine mögliche Lösung ist
+das Sperren von Datenbankobjekten (Tupeln, Seiten etc.) \emph{vor} dem
+Zugriff und dem Befolgen eines \highl[Sperrprotokoll]{Sperrprotokolls}
+(\highl{Zwei-Phasen-Sperrprotokoll}\index{Sperrprotokoll!Zwei Phasen}
+und \highl{Freigabeprotokoll}).
+
 
 \clearpage
 \appendix
