--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -2971,6 +2971,21 @@ Parallelität zu erhöhen. Bei kurzen Sperren ist eine höhere
 Parallelität als bei langen Sperren möglich. Daher finden wir das oft
 in DBMS.
 
+\section{Sperrgranulate}
+\label{sec:sperrgranulate}
+
+Der Abschnitt behandelt die Frage, was gesperrt wird. Neben den
+logischen Datenbankobjekten, wie Datenelementen (Attributwert), Satz
+(Tupel), Tabelle (Relation) oder der Datenbank selbst sind physische
+Datenbankobjekte (Seite, Seitenausschnitt, Datenbanksegment)
+möglich. Es wird ein Kompromiss aus hoher Parallelität, Performance
+und Implementierungsaufwand gesucht. Kleine Sperrgranulate sind wegen
+der Parallelität zu bevorzugen. Diese kosten jedoch Performance und
+sind schwerer umzusetzen. Daher ist von der Betrachtungsweise eher ein
+gröberes Granulat zu bevorzugen. Derzeit sind Tupel bzw. Indexeinträge
+die kleinsten Granulate und es gibt eine Hierarchie. Darin folgt dem
+Tupel eine Relation und darauf ein Segment. Die größte Stufe ist die Datenbank.
+
 \clearpage
 \appendix
 
