Kapitel zu Stetigkeit überarbeitet

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -2559,7 +2559,7 @@ Sei $X$ ein metrischer Raum.
 \begin{enumerate}[(1)]
 \item Eine Menge $O\subset X$ heißt genau dann
   \highl[Menge!offene]{offen\index{offen}},
-  wenn es zu jedem Element in $O$ eine $\varepsilon$-Kugel um dieses
+  wenn es zu jedem Element in $O$ eine $\varepsilon$"=Kugel um dieses
   Element gibt, die ebenfalls ganz in $O$ liegt.
   \begin{gather*}\forall x\in O\colon\mathring{B_{\varepsilon}}(x)\subset O\end{gather*}
 \item $A\subset X$ heißt genau dann
@@ -2578,15 +2578,17 @@ Sei $X$ ein metrischer Raum.
         \mathring{B_{\varepsilon}}(x_0)\cap (X\backslash
         \emptyset)\neq \emptyset$\lightning 
       \item $X$ ist abgeschlossen, da $X\backslash X=\emptyset$. Die leere Menge ist offen.
-      \item $\emptyset$ ist abgeschlossen, da $X\backslash \emptyset=X$. $X$ ist offen.
+      \item $\emptyset$ ist abgeschlossen, da $X\backslash
+        \emptyset=X$ und $X$ ist offen.
     \end{itemize}
   \item Für $r\geq 0$ ist $\mathring{B_r}(a)$ offen und $B_r(a)$ abgeschlossen.
 \end{enumerate}
 \end{beispiel}
 
 \begin{theorem}\label{satz:abgTeilmenge}
-  Eine Teilmenge $A\subseteq X$ ist genau dann abgeschlossen, wenn $\forall
-  (x_n) \subset A\colon(x_n)$ konvergent $\Rightarrow \lim x_n \in A$.
+  Eine Teilmenge $A\subseteq X$ ist genau dann abgeschlossen, wenn für
+  alle $(x_n) \subset A$ gilt, $(x_n)$ ist konvergent $\Rightarrow
+  \lim x_n \in A$.
   \begin{proof}
     \begin{itemize}
      \item["`$\Rightarrow$"'] Der Beweis erfolgt durch Kontraposition: Sei $A$
@@ -2600,15 +2602,15 @@ Sei $X$ ein metrischer Raum.
       \mathring{B_{\varepsilon}}(a)$\lightning
      \item["`$\Leftarrow$"'] Sei $\forall (x_n)\subset A\colon x_n$ konvergent
       $\Rightarrow \lim x_n \in A$. Wir nehmen an, $A$ ist offen. Dann ist zu
-      zeigen:
-    \begin{align*}
-      A \text{ abgeschlossen} &\Leftrightarrow X\backslash A \text{ offen}\\
-      &\Leftrightarrow \forall x \in X\backslash A \exists \varepsilon >0\colon\mathring{B_{\varepsilon}}
-      (x)\subseteq X\backslash A\\
-      &\Leftrightarrow \forall x \in X\backslash A \exists \varepsilon >0\colon\mathring{B_{\varepsilon}}
-      (x)\cap A = \emptyset
-    \end{align*}
-    $\Rightarrow \exists x_0 \in X\backslash A \forall \varepsilon
+      zeigen, dass $A$ abgeschlossen ist, genau dann, wenn
+      $X\backslash A$  offen ist. Dies ist genau dann, wenn $\forall x
+      \in X\backslash A \exists \varepsilon
+      >0\colon\mathring{B_{\varepsilon}} (x)\subseteq X\backslash
+      A$. Das ist aber genau dann der Fall, wenn $\forall x \in
+      X\backslash A \exists \varepsilon
+      >0\colon\mathring{B_{\varepsilon}} (x)\cap A = \emptyset$. Wir
+      gehen wieder vom Gegenteil aus, also $A$ ist offen. Dann
+      existiert ein $x_0 \in X\backslash A \forall \varepsilon
       >0\colon\mathring{B_{\varepsilon}}(x_0) \cap A \neq \emptyset$.
       Insbesondere existiert ein $x_n \in A \colon d(x_n,x_0)<\frac{1}{n}$.
       Nach Voraussetzung folgt, $x_0=\lim x_n \in A$\lightning
@@ -2618,33 +2620,36 @@ Sei $X$ ein metrischer Raum.
 
 \begin{lemma}
   Sei $A'$ die Menge der Häufungspunkte von $A$. Dann ist $A$ genau dann
-  abgeschlossen, wenn $A'$ eine Teilmenge von $A$ ist
+  abgeschlossen, wenn $A'$ eine Teilmenge von $A$ ist.
   \begin{proof}
     \begin{itemize}
-     \item["`$\Rightarrow$"'] Sei $a\in A'$. Dann existiert $x_n \subset A,
-      x_n\neq a, x_n\rightarrow a \Rightarrow a \in A$.
-  \item["`$\Leftarrow$"'] Annahme: $A$ ist nicht abgeschlossen. Dann existiert
-      $(x_n) \subset A, (x_n)$ ist konvergent, aber $\lim x_n\in A$. Also ist
-      $a$ Häufungspunkt von $A$ und $A'\not\subset A$\lightning
+    \item["`$\Rightarrow$"'] Sei $a\in A'$ ein Häufungspunkt. Dann
+      existiert $x_n \subset A, x_n\neq a, x_n\rightarrow a$. Nach dem
+      \autoref{satz:abgTeilmenge} ist dann  $a \in A$.
+    \item["`$\Leftarrow$"'] Annahme: $A$ ist nicht abgeschlossen. Dann
+      existiert nach \autoref{satz:abgTeilmenge} $(x_n) \subset A,
+      (x_n)$ ist konvergent, aber $\lim x_n\notin A$. Also ist $a$
+      Häufungspunkt von $A$ und $A'\nsubset A$.\lightning
 \end{itemize}
   \end{proof}
 \end{lemma}
 
+% Satz 5
 \begin{theorem}\label{satz:fkt-aquiv}
   Seien $X,Y$ metrische Räume und $f\colon D\rightarrow Y$. Dann sind folgende
   Aussagen äquivalent:
   \begin{enumerate}[(1)]
    \item $f$ ist stetig auf $X$.
-   \item $\forall O \subset Y$ offen $\colon f^{-1}(O)\coloneqq\{x\in X\colon
+   \item $\forall O \subset Y$ offen gilt, $f^{-1}(O)\coloneqq\{x\in X\colon
     f(x)\in O\}$ offen.
-   \item $\forall A \subset Y$ abgeschlossen $\colon f^{-1}(A)$ abgeschlossen.
+   \item $\forall A \subset Y$ abgeschlossen gilt, $f^{-1}(A)$ abgeschlossen.
   \end{enumerate}
   \begin{proof}
     \begin{itemize}
      \item[(1)$\Rightarrow$ (2)] Sei $O\subset Y$ offen, $x\in
       f^{-1}(O)\Leftrightarrow f(x)\in O$. Da $O$ offen ist, gibt es ein
       $\varepsilon >0\colon\mathring{B_{\varepsilon}} (f(x))\subset O$. Wegen
-      der Stetigkeit von $f$ haben wir $\exists \delta >0\colon
+      der Stetigkeit von $f$ existiert ein $\delta >0\colon
       f(\mathring{B_{\delta}}(x))\subset
       \mathring{B_{\varepsilon}}(f(x))\subset O \Longrightarrow
       \mathring{B_{\delta}}(x)\subset f^{-1}(O)$.
