Abschnitt zum Zwischenwertsatz korrigiert

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -2862,93 +2862,149 @@ Sei $X$ ein metrischer Raum.
     \lim_{n\rightarrow\infty}f(x_n)=\lim_{k\rightarrow\infty}f(x_{n_k})=f(a)\in
     f(A)= b\in f(A)$.
   \end{proof}
- \end{theorem}
+\end{theorem}
 
 \section{Zwischenwert- und Fixpunktsatz}
 \subsubsection{Zwischenwertsätze reeller Funktionen}
-Eine Funktion $f\colon D\rightarrow\R , D\subset \R$ nennt man \emph{reelle Funktion\index{Funktion!reelle}}.
-\begin{theorem}
-\label{satz:zws}
-Sei $f\colon[a,b]\rightarrow \R$ stetig mit $f(a)<0$ und $f(b)>0$ (bzw. umgekehrt). Dann existiert ein
-\begin{gather*}p\in[a,b]\colon f(p)=0\end{gather*}
-\textbf{Beweis}: Zur Beweisführung wird die Intervall-Halbierungsmethode heran gezogen:
-Sei $f(a)<0$ und $f(b)>0$. Wir definieren induktiv $[a_n,b_n]\subset [a,b], n\in \N$
-\begin{enumerate}[(i)]
-  \item $[a_n,b_n]\subset [a_{n-1},b_{n-1}], n\geq 1, [a_0,b_0]\coloneqq[a,b]$
-  \item $b_n-a_n=2^{-n}(b-a)$
-  \item $f(a_n)\leq 0, f(b_n)\geq 0$
-\end{enumerate}
-Induktionsanfang: $[a_0,b_0]=[a,b]$\\
-Induktionsschritt: $n\rightarrow n+1$\\
-Sei $[a_n,b_n]$ bereits definiert und $m\coloneqq\frac{a_n+b_n}{2}$. Dann sind folgende zwei Fälle möglich:
-\begin{enumerate}[1. F{a}ll]
-  \item $f(m)\geq 0$ Dann ist $[a_{n+1},b_{n+1}]\coloneqq[a_n,m]\subset [a_n,b_n]$
-    \begin{enumerate}[(i)]
-      \item $b_{n+1}-a_{n+1}=m-a_n=\frac{a_n+b_n}{2}-a_n=\frac{1}{2}(b_n-a_n)=\frac{1}{2}2^{-n}(b-a)=2^{-(n+1)}(b-a)$
-      \item $f(a_{n+1})=f(a_n)\geq 0, f(b_{n+1})=f(m)\geq 0$
-    \end{enumerate}
-  \item $f(m)<0$ Dann ist $[a_{n+1},b_{n+1}]\coloneqq[m,b_{n+1}]\subset [a_n,b_n]$
-    \begin{enumerate}[(i)]
-      \item $b_{n+1}-a_{n+1}=b_n-m=b_n-\frac{a_n+b_n}{2}=\frac{1}{2}(b_n-a_n)=\frac{1}{2}2^{-n}(b-a)=2^{-(n+1)}(b-a)$
-      \item $f(a_{n+1})=f(m)\leq 0, f(b_{n+1})\geq 0$
-    \end{enumerate}
-    $\left.\begin{array}{rcl}
-      (a_n) \text{mon. wachsend u. beschr.}\\
-      (b_n) \text{mon. fallend u. beschr.}\\
-      b_n-a_n=2^{-n}(b-a)
-    \end{array}\right\}\Rightarrow \lim a_n=\lim b_n=p$
-\end{enumerate}
-Die Stetigkeit von $f$ und die vorige Fallunterscheidung liefern:\\
-$\left.\begin{array}{rcl}
-  f(p)=\lim f(a_n)\leq 0\\
-  f(p)=\lim f(b_n)\geq 0
-\end{array}\right\}\Rightarrow f(p)=0$
-\qed
-\end{theorem}
 
-\begin{Folg}
-\textbf{2. Zwischenwertsatz} Sei $f\colon[a,b]\rightarrow\R$ und $c\in \R$ liegt zwischen $f(a)$ und $f(b)$. Dann existiert
-$p\in[a,b]\colon f(p)=c$.\\
-\textbf{Beweis} Sei $f(a)<c<f(b)$. Wir definieren eine Funktion
-  $g\colon[a,b]\rightarrow \R$ durch $g(x)\coloneqq f(x)-c$. Die
-Funktion $g$ ist stetig mit $g(a)=f(a)-c<0, g(b)=f(b)-c>0$. Dann folgt nach \autoref{satz:zws} $\exists p\in[a,b]
-\colon g(p)=f(p)-c=0\Rightarrow f(p)=c$
-\qed
-\end{Folg}
-
-\begin{Folg}
-Sei $f\colon[a,b]\rightarrow\R$ stetig mit $f([a,b])\subset [a,b]$. Dann existiert $p\in [a,b]\colon f(p)$. $p$ heißt
-\emph{Fixpunkt\index{Fixpunkt}}.
-\end{Folg}
-
-Bemerkung: Der Zwischenwertsatz gilt nicht, wenn rationale Zahlen betrachtet werden. Beispielsweise gibt es für
-die Funktion $f(x)\coloneqq x^2-2$ keinen Fixpunkt im Intervall $[0,2]$, wenn das $x$ aus den rationalen Zahlen stammt.
-
-\subsection{Ein Satz über reelle inverse Funktionen}
-\begin{definition}
-Sei $f\colon D\rightarrow\R, D\subset \R$ eine reelle Funktion. Sie heißt genau dann \emph{monoton wachsend} auf $D$, wenn
-\begin{gather*}\forall x_1,x_2\in D\colon x_1<x_2\Rightarrow f(x_1)\leq f(x_2)\end{gather*}
-Sie heißt genau dann \emph{streng monoton wachsend} auf $D$, wenn
-\begin{gather*}\forall x_1,x_2\in D\colon x_1<x_2\Rightarrow f(x_1)<f(x_2)\end{gather*}
-Sie heißt genau dann \emph{monoton fallend} auf $D$, wenn
-\begin{gather*}\forall x_1,x_2\in D\colon x_1<x_2\Rightarrow f(x_1)\geq f(x_2)\end{gather*}
-Sie heißt genau dann \emph{streng monoton fallend} auf $D$, wenn
-\begin{gather*}\forall x_1,x_2\in D\colon x_1<x_2\Rightarrow f(x_1)>f(x_2)\end{gather*}
+\begin{definition}[Reelle Funktion]
+  Eine Funktion $f\colon D\rightarrow\R, D\subset \R$ nennt man
+  \highl[Funktion!reelle]{reelle Funktion}.
 \end{definition}
 
-\begin{theorem}
-  \label{satz:reellInvFkt}
-Sei $f\colon[a,b]\rightarrow\R$ eine stetige, streng monoton wachsende (fallende) Funktion und $A=f(a), B=f(b)$. Dann ist
-$f\colon[a,b]\rightarrow [A,B] ([B,A])$ bijektiv und $f^{-1}\colon[A,B]([B,A])\rightarrow [a,b]$ ist stetig und streng 
-monoton wachsend (fallend).
-\textbf{Beweis} Sei $f\colon[a,b]\rightarrow\R$ stetig und streng monoton wachsend. Diese Funktion ist injektiv, denn
-$x_1<x_2\Rightarrow f(x_1)<f(x_2)$.\\
-$f\colon[a,b]\rightarrow[A,B]$ ist surjektiv, denn wenn $A<c<B$ dann folgt nach dem zweiten Zwischenwertsatz $\exists
-p\in [a,b]\colon f(p)=c$. Daher ist $f$ bijektiv von $[a,b]\rightarrow [A,B]$.\\
-$f^{-1}$ ist streng monoton wachsend. Es ist zu zeigen, dass $y_1,y_2\in [A,B]\colon y_1<y_2\rightarrow f^{-1}<f^{-1}$.\\
-Annahme: $f^{-1}(y_1)\geq f^{-1}(y_2)\rightarrow y_1=f(f^{-1}(y_1))\geq f(f^{-1}(y_2))=y_2$\textnormal{\lightning}\\
-$f^{-1}[A,B]\rightarrow [a,b]$ ist stetig. Nach \autoref{satz:invFunkt} ist auch $f$ auf der kompakten Menge 
-$[a,b]$ stetig und bijektiv. Daher folgt, dass $^{-1}\colon f([A,B])=[A,B]\rightarrow [a,b]$ stetig.\qed
+%Satz 10
+\begin{theorem}[Zwischenwertsatz]\label{satz:zws}
+  Sei $f\colon[a,b]\rightarrow \R$ stetig mit $f(a)<0$ und $f(b)>0$
+  (bzw. umgekehrt). Dann existiert ein
+  \begin{gather*}
+    p\in[a,b]\colon f(p)=0
+  \end{gather*}
+  \begin{tikzpicture}[domain=-1.8:1.8]
+    \draw[very thin,color=gray] (-2,-4) grid (2,4);
+    \draw[->] (-2.2,0) -- (2.2,0) node[right] {$x$};
+    \draw[->] (0,-4.2) -- (0,4.2) node[above] {$f(x)$};
+    \draw[color=blue]   plot (\x,{(2*sin(\x r))-(3*cos(\x
+      r))+(.25*\x*\x)})    node[right] {$f(x) = 2\sin x-3\cos
+      x+0,25x^{2}$};
+    \draw[dashed] (1.8,0) node[anchor=north] {$b$} -- (1.8,3.4393);
+    \draw[dashed] (-1.8,0) node[anchor=south] {$a$} -- (-1.8,-.456);
+    \draw (.9237,0) node[anchor=north] {$p$} circle (1pt);
+  \end{tikzpicture}
+  \begin{proof}
+    Zur Beweisführung wird die Intervall-Halbierungsmethode heran
+    gezogen: Sei $f(a)<0$ und $f(b)>0$. Wir definieren induktiv
+    $[a_n,b_n]\subset [a,b]$ mit  $n\in \N$.
+    \begin{enumerate}[(i)]
+    \item $[a_n,b_n]\subset [a_{n-1},b_{n-1}], n\geq 1, [a_0,b_0]\coloneqq[a,b]$
+    \item $b_n-a_n=2^{-n}(b-a)$
+    \item $f(a_n)\leq 0, f(b_n)\geq 0$
+    \end{enumerate}
+    Der Induktionsanfang ist $[a_0,b_0]=[a,b]$. Im Induktionsschritt
+    gehen wir von  $n$ zu $n+1$ über. Dazu sei $[a_n,b_n]$ bereits
+    definiert und $m\coloneqq\frac{a_n+b_n}{2}$. Dann sind folgende
+    zwei Fälle möglich:
+    \begin{enumerate}[1.\,F{a}ll]
+    \item $f(m)\geq 0$ Dann ist $[a_{n+1},b_{n+1}]\coloneqq[a_n,m]$.
+    \begin{enumerate}[(i)]
+    \item $[a_{n},m]\subset [a_{n}, b_{n}]$
+    \item $b_{n+1}-a_{n+1} = m-a_n = \frac{a_n+b_n}{2}-a_n =
+      \frac{1}{2}(b_n-a_n) = \frac{1}{2}2^{-n}(b-a)=2^{-(n+1)}(b-a)$
+    \item $f(a_{n+1})=f(a_n)\geq 0, f(b_{n+1})=f(m)\geq 0$
+    \end{enumerate}
+  \item $f(m)<0$ Dann ist $[a_{n+1},b_{n+1}]\coloneqq[m,b_{n}]\subset [a_n,b_n]$
+    \begin{enumerate}[(i)]
+    \item $[m,b_{n}]\subset [a_n,b_n]$
+    \item $b_{n+1}-a_{n+1} = b_n-m = b_n-\frac{a_n+b_n}{2} =
+      \frac{1}{2}(b_n-a_n) = \frac{1}{2}2^{-n}(b-a) =2^{-(n+1)}(b-a)$
+    \item $f(a_{n+1})=f(m)\leq 0, f(b_{n+1})\geq 0$
+    \end{enumerate}
+  \end{enumerate}
+  Die Folge der $(a_n)$ ist monoton wachsend und beschränkt und die
+  $(b_n)$ sind monoton fallend und beschränkt. Insgesamt ist
+  $b_n-a_n=2^{-n}(b-a)$ und es folgt, $\lim a_n=\lim b_n=p$.
+
+  Die Stetigkeit von $f$ und die vorige Fallunterscheidung liefern:
+  \begin{gather*}
+   \left.\begin{array}{rcl}
+      f(p)=\lim f(a_n)\leq 0\\
+      f(p)=\lim f(b_n)\geq 0
+    \end{array}\right\}\Rightarrow f(p)=0 
+  \end{gather*}
+\end{proof}
+\end{theorem}
+
+\begin{Folg}[2.\,Zwischenwertsatz]
+  Sei $f\colon[a,b]\rightarrow\R$ stetig und $c\in \R$ liegt zwischen
+  $f(a)$ und $f(b)$. Dann existiert $p\in[a,b]\colon f(p)=c$.
+  \begin{proof}
+    Sei $f(a)<c<f(b)$. Wir definieren eine Funktion
+    $g\colon[a,b]\rightarrow \R$ durch $g(x)\coloneqq f(x)-c$. Die
+    Funktion $g$ ist stetig mit $g(a)=f(a)-c<0, g(b)=f(b)-c>0$. Dann
+    folgt nach \autoref{satz:zws} $\exists p\in[a,b] \colon
+    g(p)=f(p)-c=0\Rightarrow f(p)=c$.
+  \end{proof}
+\end{Folg}
+
+\begin{Folg}
+  Sei $f\colon[a,b]\rightarrow\R$ stetig mit $f([a,b])\subset
+  [a,b]$. Dann existiert $p\in [a,b]\colon f(p)$. Der Punkt $p$ heißt
+  \highl{Fixpunkt}.
+\end{Folg}
+
+\begin{remark}
+  Der Zwischenwertsatz gilt nicht, wenn rationale Zahlen betrachtet
+  werden. Beispielsweise gibt es für die Funktion $f(x)\coloneqq
+  x^2-2$ keinen Fixpunkt im Intervall $[0,2]$, wenn das $x$ aus den
+  rationalen Zahlen stammt.
+\end{remark}
+
+
+\subsection{Ein Satz über reelle inverse Funktionen}
+\begin{definition}[monoton wachsend/fallend]
+  Sei $f\colon D\rightarrow\R, D\subset \R$ eine reelle Funktion. Sie
+  heißt genau dann \highl{monoton wachsend} auf $D$, wenn
+  \begin{gather*}
+    \forall x_1,x_2\in D\colon x_1<x_2\Rightarrow f(x_1)\leq f(x_2)
+  \end{gather*}
+  Sie heißt genau dann \highl{streng monoton wachsend} auf $D$, wenn
+  \begin{gather*}
+    \forall x_1,x_2\in D\colon x_1<x_2\Rightarrow f(x_1)<f(x_2)
+  \end{gather*}
+  Sie heißt genau dann \highl{monoton fallend} auf $D$, wenn
+  \begin{gather*}
+    \forall x_1,x_2\in D\colon x_1<x_2\Rightarrow f(x_1)\geq f(x_2)
+  \end{gather*}
+  Sie heißt genau dann \highl{streng monoton fallend} auf $D$, wenn
+  \begin{gather*}
+    \forall x_1,x_2\in D\colon x_1<x_2\Rightarrow f(x_1)>f(x_2)
+  \end{gather*}
+\end{definition}
+
+%Satz 11
+\begin{theorem}\label{satz:reellInvFkt}
+  Sei $f\colon[a,b]\rightarrow\R$ eine stetige, streng monoton
+  wachsende (fallende) Funktion und $A=f(a), B=f(b)$. Dann ist
+  $f\colon[a,b]\rightarrow [A,B]$ bzw. $[B,A]$ bijektiv und
+  $f^{-1}\colon[A,B]$ bzw. $[B,A]\rightarrow [a,b]$ ist stetig und
+  streng monoton wachsend (fallend).
+  \begin{proof}
+    Sei $f\colon[a,b]\rightarrow\R$ stetig und streng monoton
+    wachsend. Diese Funktion ist injektiv, denn für
+    $x_1<x_2\Rightarrow f(x_1)<f(x_2)$. Weiterhin ist
+    $f\colon[a,b]\rightarrow[A,B]$ surjektiv, denn wenn $A<c<B$ dann
+    folgt nach dem zweiten Zwischenwertsatz $\exists p\in [a,b]\colon
+    f(p)=c$. Daher ist $f$ bijektiv von $[a,b]\rightarrow [A,B]$.
+
+    Die Umkehrabbildung $f^{-1}$ ist streng monoton wachsend. Es ist
+    zu zeigen, dass $y_1,y_2\in [A,B]\colon y_1<y_2\rightarrow
+    f^{-1}<f^{-1}$. Dazu nehmen wir an, $f^{-1}(y_1)\geq
+    f^{-1}(y_2)\Rightarrow y_1=f(f^{-1}(y_1))\geq
+    f(f^{-1}(y_2))=y_2$\lightning Schließlich ist
+    $f^{-1}[A,B]\rightarrow [a,b]$ stetig. Denn nach
+    \autoref{satz:invFunkt} ist auch $f$ auf der kompakten Menge
+    $[a,b]$ stetig und bijektiv. Daher folgt, dass $^{-1}\colon
+    f([A,B])=[A,B]\rightarrow [a,b]$ stetig.
+  \end{proof}
 \end{theorem}
 
 \subsection{Der Banachsche Fixpunktsatz in vollständigen metrischen Räumen}
